--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,16 +257,10 @@ body {
 /* input autofill style */
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
+input:-webkit-autofill:focus {
     border: none;
     outline: none;
     background-color: transparent;
-    font-size: inherit;
-    color: inherit;
+    font-size: 14px;
+    color: var(--main-light);
 }
